unpackaged/main/default/objects/Accord_cadre_Association__c/Accord_cadre_Association__c.object-meta.xml
<CustomObject>
    <label>Accord cadre - Association</label>
    <nameField>
        <displayFormat>ACA-{0000000}</displayFormat>
        <label>Numéro Accord cadre - Association</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accords cadre - Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>