unpackaged/main/default/objects/Accord_cadre_Association__c/fields/AC_compteId__c.field-meta.xml
<CustomField>
    <fullName>AC_compteId__c</fullName>
    <description>compte de l&#39;accord cadre</description>
    <formula>CASESAFEID( Accord_Cadre__r.Compte__c )</formula>
    <label>AC compte Id</label>
    <type>Text</type>
</CustomField>