unpackaged/main/default/objects/Accord_cadre_Association__c/fields/Accord_Cadre__c.field-meta.xml
<CustomField>
    <fullName>Accord_Cadre__c</fullName>
    <label>Accord - Cadre</label>
    <referenceTo>Framework_Agreement__c</referenceTo>
    <relationshipLabel>Accords cadre - Associations</relationshipLabel>
    <relationshipName>Accords_cadre_Associations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>