unpackaged/main/default/objects/Accord_cadre_Association__c/fields/Actif__c.field-meta.xml
<CustomField>
    <fullName>Actif__c</fullName>
    <formula>Accord_Cadre__r.Active__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actif</label>
    <type>Checkbox</type>
</CustomField>