unpackaged/main/default/objects/Accord_cadre_Association__c/fields/DateSignature__c.field-meta.xml
<CustomField>
    <fullName>DateSignature__c</fullName>
    <label>Date de signature</label>
    <type>Date</type>
</CustomField>