unpackaged/main/default/objects/Accord_cadre_Association__c/fields/IsGroupement__c.field-meta.xml
<CustomField>
    <fullName>IsGroupement__c</fullName>
    <formula>if
(
Accord_Cadre__r.Groupement__c &lt;&gt; null
,
TRUE
,
FALSE
)</formula>
    <label>IsGroupement</label>
    <type>Checkbox</type>
</CustomField>