unpackaged/main/default/objects/Accord_cadre_Association__c/fields/Type_d_accord_cadre__c.field-meta.xml
<CustomField>
    <fullName>Type_d_accord_cadre__c</fullName>
    <formula>Accord_Cadre__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type d&#39;accord cadre</label>
    <type>Text</type>
</CustomField>