unpackaged/main/default/objects/Accord_cadre_Association__c/fields/TypeContrat__c.field-meta.xml
<CustomField>
    <fullName>TypeContrat__c</fullName>
    <formula>IF ( INCLUDES (Accord_Cadre__r.TypedeContrat_Duree__c , &quot;CD&quot; ), &quot;CD; &quot;,null ) &amp;
IF ( INCLUDES (Accord_Cadre__r.TypedeContrat_Duree__c , &quot;CDM&quot; ), &quot;CDM; &quot;,null ) &amp;
IF ( INCLUDES (Accord_Cadre__r.TypedeContrat_Duree__c , &quot;LD&quot; ), &quot;LD &quot;,null )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type de contrat</label>
    <type>Text</type>
</CustomField>