unpackaged/main/default/objects/Accord_cadre_Association__c/fields/ValiditeDateDebut__c.field-meta.xml
<CustomField>
    <fullName>ValiditeDateDebut__c</fullName>
    <formula>Accord_Cadre__r.Validite_DatedeDebut__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Validité - Date de Début</label>
    <type>Date</type>
</CustomField>