unpackaged/main/default/objects/Accord_cadre_Association__c/fields/ValiditeDateFin__c.field-meta.xml
<CustomField>
    <fullName>ValiditeDateFin__c</fullName>
    <formula>Accord_Cadre__r.Validite_DatedeFin__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Validité - Date de fin</label>
    <type>Date</type>
</CustomField>