unpackaged/main/default/objects/Accord_cadre_Association__c/fields/Vue_Commerciale_Client__c.field-meta.xml
<CustomField>
    <fullName>Vue_Commerciale_Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vue Commerciale Client</label>
    <referenceTo>SalesAreaData__c</referenceTo>
    <relationshipLabel>Accords cadre - Associations</relationshipLabel>
    <relationshipName>Accords_cadre_Associations</relationshipName>
    <type>Lookup</type>
</CustomField>